--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,12 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.0
+Imports:
+    glue
+    ,labelled
+    ,purrr
+    ,readxl
+    ,dplyr
+    ,haven
+    ,janitor
+    
