--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,15 +9,20 @@ export(checkForMonthlyMissingness)
 export(checkForOmittedVariables)
 export(checkForRemovedRows)
 export(createDataStoreFolder)
+export(criticalChecks)
 export(pullCodebookFromExcelFile)
 export(pullDTAfromUrl)
 export(pullData)
 export(pullRDSfromUrl)
 export(pullVariableListFromExcelFile)
 export(runAd)
+export(runAllAd2023)
+export(runAllMs2023)
+export(runAllPso2023)
 export(runMs)
 export(runPso)
 export(runRegistryChecks)
+export(submitToDataStore)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,count)
