--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,12 +15,6 @@ export(pullDTAfromUrl)
 export(pullData)
 export(pullRDSfromUrl)
 export(pullVariableListFromExcelFile)
-export(runAd)
-export(runAllAd2023)
-export(runAllMs2023)
-export(runAllPso2023)
-export(runMs)
-export(runPso)
 export(runRegistryChecks)
 export(submitToDataStore)
 importFrom(dplyr,anti_join)
@@ -36,3 +30,4 @@ importFrom(janitor,clean_names)
 importFrom(labelled,var_label)
 importFrom(purrr,map_lgl)
 importFrom(readxl,read_xlsx)
+importFrom(regdqchecks,runApplication)
