--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Description: Project to run quality checks for corevitas registires
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.0
+RoxygenNote: 7.3.1
 Imports:
     glue
     ,labelled
@@ -16,4 +16,4 @@ Imports:
     ,dplyr
     ,haven
     ,janitor
-    
+    ,registrydqchecksreport
