--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,4 +30,4 @@ importFrom(janitor,clean_names)
 importFrom(labelled,var_label)
 importFrom(purrr,map_lgl)
 importFrom(readxl,read_xlsx)
-importFrom(regdqchecks,runApplication)
+importFrom(registrydqchecksreport,runApplication)
