--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Run data quality checks for registries
 Version: 0.0.0.9000
 Authors@R: 
     person("Scott", "Kreider", , "skreider@corevitas.com", role = c("aut", "cre"))
-Description: Project to run quality checks for corevitas registires
+Description: Project to run data quality checks for CorEvitas registries.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
