--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(checkForOmittedVariables)
 export(checkForRemovedRows)
 export(createDataStoreFolder)
 export(criticalChecks)
+export(outputListings)
 export(pullCodebookFromExcelFile)
 export(pullDTAfromUrl)
 export(pullData)
@@ -28,6 +29,10 @@ importFrom(glue,glue)
 importFrom(haven,read_dta)
 importFrom(janitor,clean_names)
 importFrom(labelled,var_label)
+importFrom(openxlsx,addWorksheet)
+importFrom(openxlsx,createWorkbook)
+importFrom(openxlsx,saveWorkbook)
+importFrom(openxlsx,writeData)
 importFrom(purrr,map_lgl)
 importFrom(readxl,read_xlsx)
 importFrom(registrydqchecksreport,runApplication)
