clean up packageization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,3 +37,4 @@ importFrom(purrr,map_lgl)
 importFrom(readxl,read_xlsx)
 importFrom(registrydqchecksreport,runApplication)
 importFrom(registrydqchecksreportdown,generateReport)
+importFrom(stats,setNames)
