package check() updates and edits

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,3 +38,5 @@ importFrom(readxl,read_xlsx)
 importFrom(registrydqchecksreport,runApplication)
 importFrom(registrydqchecksreportdown,generateReport)
 importFrom(stats,setNames)
+importFrom(stringr,str_extract)
+importFrom(stringr,str_replace_all)
