--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,8 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Remotes:
-    github::skreider-ce/registrydqchecksreport
-    ,github::skreider-ce/registrydqchecksreportdown
+    github::skreider-ce/registrydqchecksreport@v0.1
+    ,github::skreider-ce/registrydqchecksreportdown@v0.1
 Imports:
     glue
     ,labelled
