added copy functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(checkForMissingVariableLabels)
 export(checkForMonthlyMissingness)
 export(checkForOmittedVariables)
 export(checkForRemovedRows)
+export(copyDatasetsToLocation)
 export(createDataStoreFolder)
 export(criticalChecks)
 export(outputListings)
