--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(checkForMissingVariableLabels)
 export(checkForMonthlyMissingness)
 export(checkForOmittedVariables)
 export(checkForRemovedRows)
+export(checkForVariableTypes)
 export(copyDatasetsToLocation)
 export(createDataStoreFolder)
 export(criticalChecks)
@@ -40,3 +41,4 @@ importFrom(registrydqchecksreportdown,generateReport)
 importFrom(stats,setNames)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_replace_all)
+importFrom(tibble,tibble)
