Add updatePackages function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(pullRDSfromUrl)
 export(pullVariableListFromExcelFile)
 export(runRegistryChecks)
 export(submitToDataStore)
+export(updatePackages)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,count)
