Subset dataset to last year
- Add subsetDatasetToLast year function - prioritizes visitdate in the dataset but falls back on visitdate0 - and if nothing then doesn't subset at all

- Add function to codebook NC checks so that the checks are only run on info from the past year

- Update package documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(pullRDSfromUrl)
 export(pullVariableListFromExcelFile)
 export(runRegistryChecks)
 export(submitToDataStore)
+export(subsetDatasetToLastYear)
 export(updatePackages)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,bind_rows)
@@ -32,6 +33,7 @@ importFrom(glue,glue)
 importFrom(haven,read_dta)
 importFrom(janitor,clean_names)
 importFrom(labelled,var_label)
+importFrom(lubridate,"%m-%")
 importFrom(openxlsx,addWorksheet)
 importFrom(openxlsx,createWorkbook)
 importFrom(openxlsx,saveWorkbook)
