--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(runRegistryChecks)
 export(submitToDataStore)
 export(subsetDatasetToLastYear)
 export(updatePackages)
+export(validateCodebook)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,count)
