Add copyRomListingToFolder function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(checkForOmittedVariables)
 export(checkForRemovedRows)
 export(checkForVariableTypes)
 export(copyDatasetsToLocation)
+export(copyRomListingToFolder)
 export(createDataStoreFolder)
 export(criticalChecks)
 export(outputListings)
