Update percentChange functions
- Update calculatePercentChange to add max(pct) to the parent row

- Add filterPercentChange function to subset gtsummary object to change > 5%

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(copyDatasetsToLocation)
 export(copyRomListingToFolder)
 export(createDataStoreFolder)
 export(criticalChecks)
+export(filterPercentChange)
 export(outputListings)
 export(pullCodebookFromExcelFile)
 export(pullDTAfromUrl)
