Add documentation for new function and more
- Update package namespace for subsetDataToActiveSites function

- Update function wording for subsetDataToLastYear

- Add subsetDataToActiveSites to Excel listing output script

- Rename site function to appropriate name

- Update scratch.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(pullRDSfromUrl)
 export(pullVariableListFromExcelFile)
 export(runRegistryChecks)
 export(submitToDataStore)
+export(subsetDatasetToActiveSites)
 export(subsetDatasetToLastYear)
 export(updatePackages)
 export(validateCodebook)
