Add functionality to subset based on calculateVariable
- Add subsetDatasetToNonCalculatedVariables function and update Package documentation for this function

- Add subset function to outputListings

- Update NOTE printout on subsetToLastYear and subsetToActive sites to have NOTE: instead of ERROR:

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(runRegistryChecks)
 export(submitToDataStore)
 export(subsetDatasetToActiveSites)
 export(subsetDatasetToLastYear)
+export(subsetDatasetToNonCalculatedVariables)
 export(updatePackages)
 export(validateCodebook)
 importFrom(dplyr,anti_join)
