--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,count)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_at)
 importFrom(dplyr,n)
 importFrom(dplyr,select)
 importFrom(dplyr,syms)
