Added comment perpetuation function
- Create perpetuateExcelComments function
--- Add all appropriate documentation

- Add cdmRomReportUrl and lastMonthDataPullDate to outputListings function input

- Add function call to perpetuateExcelComments AFTER outputing the ROM report

- Update name of ROM Excel listing to include DQ in the name to increase readability AND to ensure the function won't erroneously read in the old formatted Excel files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,28 +25,33 @@ export(pullRDSfromUrl)
 export(pullSiteInfoFromExcelFile)
 export(pullVariableListFromExcelFile)
 export(runRegistryChecks)
-export(submitToDataStore)
 export(subsetDatasetToActiveSites)
 export(subsetDatasetToLastYear)
 export(subsetDatasetToNonCalculatedVariables)
 export(updatePackages)
 export(validateCodebook)
 importFrom(dplyr,anti_join)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,count)
+importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
 importFrom(dplyr,n)
 importFrom(dplyr,select)
+importFrom(dplyr,slice)
+importFrom(dplyr,starts_with)
 importFrom(dplyr,syms)
 importFrom(glue,glue)
 importFrom(haven,read_dta)
 importFrom(janitor,clean_names)
+importFrom(janitor,row_to_names)
 importFrom(labelled,var_label)
 importFrom(lubridate,"%m-%")
 importFrom(openxlsx,addWorksheet)
 importFrom(openxlsx,createWorkbook)
+importFrom(openxlsx,loadWorkbook)
 importFrom(openxlsx,saveWorkbook)
 importFrom(openxlsx,writeData)
 importFrom(purrr,map_lgl)
