--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,21 +3,8 @@
 export(README)
 export(addCheckId)
 export(calculatePercentChange)
-export(checkForAddedRows)
-export(checkForDuplicateUniqueIds)
-export(checkForExtraVariables)
-export(checkForGivenItemsNonresponse)
-export(checkForMissingVariableLabels)
-export(checkForMonthlyMissingness)
-export(checkForOmittedVariables)
-export(checkForRemovedRows)
-export(checkForVariableTypes)
-export(copyDatasetsToLocation)
 export(copyRomListingToFolder)
-export(createDataStoreFolder)
-export(criticalChecks)
 export(filterPercentChange)
-export(outputListings)
 export(pullCodebookFromExcelFile)
 export(pullDTAfromUrl)
 export(pullData)
@@ -28,18 +15,26 @@ export(runRegistryChecks)
 export(subsetDatasetToActiveSites)
 export(subsetDatasetToLastYear)
 export(subsetDatasetToNonCalculatedVariables)
-export(updatePackages)
 export(validateCodebook)
+importFrom(dplyr,across)
+importFrom(dplyr,all_of)
 importFrom(dplyr,anti_join)
+importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,count)
+importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
+importFrom(dplyr,intersect)
+importFrom(dplyr,last_col)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
 importFrom(dplyr,n)
+importFrom(dplyr,relocate)
+importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(dplyr,setdiff)
 importFrom(dplyr,slice)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,syms)
@@ -49,11 +44,16 @@ importFrom(janitor,clean_names)
 importFrom(janitor,row_to_names)
 importFrom(labelled,var_label)
 importFrom(lubridate,"%m-%")
+importFrom(openxlsx,addStyle)
 importFrom(openxlsx,addWorksheet)
+importFrom(openxlsx,createStyle)
 importFrom(openxlsx,createWorkbook)
+importFrom(openxlsx,freezePane)
 importFrom(openxlsx,loadWorkbook)
 importFrom(openxlsx,saveWorkbook)
+importFrom(openxlsx,setColWidths)
 importFrom(openxlsx,writeData)
+importFrom(purrr,map)
 importFrom(purrr,map_lgl)
 importFrom(readxl,read_xlsx)
 importFrom(registrydqchecksreportdown,generateReport)
@@ -61,3 +61,4 @@ importFrom(stats,setNames)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_replace_all)
 importFrom(tibble,tibble)
+importFrom(utils,read.csv)
