--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,7 +51,9 @@ importFrom(openxlsx,writeData)
 importFrom(purrr,map_lgl)
 importFrom(readxl,read_xlsx)
 importFrom(registrydqchecksreportdown,generateReport)
+importFrom(stats,complete.cases)
 importFrom(stats,setNames)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_replace_all)
 importFrom(tibble,tibble)
+importFrom(utils,read.csv)
