--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,10 +22,12 @@ importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
 importFrom(dplyr,count)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
 importFrom(dplyr,intersect)
 importFrom(dplyr,last_col)
 importFrom(dplyr,mutate)
@@ -33,11 +35,14 @@ importFrom(dplyr,mutate_at)
 importFrom(dplyr,n)
 importFrom(dplyr,relocate)
 importFrom(dplyr,rename)
+importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
 importFrom(dplyr,setdiff)
 importFrom(dplyr,slice)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,syms)
+importFrom(dplyr,ungroup)
+importFrom(dplyr,where)
 importFrom(glue,glue)
 importFrom(haven,read_dta)
 importFrom(janitor,clean_names)
@@ -59,6 +64,7 @@ importFrom(readxl,read_xlsx)
 importFrom(registrydqchecksreportdown,generateReport)
 importFrom(stats,complete.cases)
 importFrom(stats,setNames)
+importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_replace_all)
 importFrom(tibble,tibble)
